. Feature：支持开发环境对外开放端口, 开发环境依赖安装 . Feature:  id_mapping 功能：analyzer，api . Feature: update表/列功能，暂时未用：改为使用生成update语句，方便手工修改 .
